--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typescript": "^5.0.3"
   },
   "scripts": {
-    "start": "nodemon ./index.ts"
+    "dev": "nodemon ./index.ts",
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
