--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
+    "outDir": "dist",
+    "rootDir": "./",
+
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
@@ -99,5 +102,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  }, 
+
+
 }
